--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
+click==5.1
+elasticsearch==2.1.0
 Flask==0.10.1
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
 psycopg2==2.6.1
+redis==2.10.3
+rq==0.5.6
+urllib3==1.12
 Werkzeug==0.10.4
 wheel==0.24.0
