--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,21 @@
+blinker==1.4
+boto==2.38.0
 click==5.1
 elasticsearch==2.1.0
 Flask==0.10.1
+Flask-Login==0.2.11
+Flask-Mail==0.9.1
+Flask-Principal==0.4.0
+Flask-Security==1.7.4
+Flask-SQLAlchemy==2.1
+Flask-WTF==0.12
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
-psycopg2==2.6.1
+passlib==1.6.5
 redis==2.10.3
 rq==0.5.6
+SQLAlchemy==1.0.9
 urllib3==1.12
 Werkzeug==0.10.4
-wheel==0.24.0
+WTForms==2.0.2
