--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==0.8.3
 blinker==1.4
 boto==2.38.0
 click==5.1
@@ -5,15 +6,28 @@ elasticsearch==2.1.0
 Flask==0.10.1
 Flask-Login==0.2.11
 Flask-Mail==0.9.1
+Flask-Migrate==1.6.0
+Flask-OAuth==0.12
 Flask-Principal==0.4.0
+Flask-Script==2.0.5
 Flask-Security==1.7.4
+Flask-Social==1.6.2
 Flask-SQLAlchemy==2.1
 Flask-WTF==0.12
+httplib2==0.9.2
 itsdangerous==0.24
 Jinja2==2.8
+Mako==1.0.2
 MarkupSafe==0.23
+oauth2==1.9.0.post1
+oauthlib==1.0.3
 passlib==1.6.5
+psycopg2==2.6.1
+python-editor==0.4
+python-twitter==2.2
 redis==2.10.3
+requests==2.8.1
+requests-oauthlib==0.5.0
 rq==0.5.6
 SQLAlchemy==1.0.9
 urllib3==1.12
